# mydns

./: .autotools  .cproject  .project  Makefile.am  Makefile.in  README.TSIG  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
contrib/: Makefile.in
doc/: Makefile.in
lib/: Makefile.am  Makefile.in  conf.c  error.c  mydnsutil.h
m4/: Makefile.in  mydns.m4
pkg/: Makefile.in
src/: Makefile.in
src/lib/: Makefile.am  Makefile.in  bits.h  header.h  ip.c  key.c  mydns.h  question.c  rr.c  soa.c  sql.c  str.c  unencode.c
src/mydns/: Makefile.am  Makefile.in  alias.c  axfr.c  cache.c  cache.h  conf.c  data.c  db.c  encode.c  error.c  listen.c  main.c  named.h  queue.c  recursive.c  reply.c  resolve.c  rr.c  sort.c  status.c  task.c  task.h  tcp.c  tsig.c  tsig.h  udp.c  update.c  update.h
src/util/: Makefile.am  Makefile.in  check.c  conf.c  export.c  import-axfr.c  import-tinydns.c  import.c  libptr.c  libptr.h  ptrconvert.c  util.c  util.h
